src/objects/IT_Replace_Item_Child__mdt.object
<CustomObject>
    <fields>
        <fullName>IT_Active__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IT_Child_Object__c</fullName>
        <label>Child Object</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IT_Field_Name__c</fullName>
        <label>Field Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IT_Image__c</fullName>
        <label>Image</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>IT_Object_Name__c</fullName>
        <label>Object Name</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Account</fullName>
                    <default>true</default>
                    <label>Account</label>
                </value>
                <value>
                    <fullName>Case</fullName>
                </value>
                <value>
                    <fullName>IT_Welfare_Project__c</fullName>
                </value>
                <value>
                    <fullName>IT_Plan__c</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>IT_PDF_Template__c</fullName>
        <label>PDF Template</label>
        <referenceTo>IT_PDF_TemplateMdt__mdt</referenceTo>
        <relationshipLabel>Replace Item Childs</relationshipLabel>
        <relationshipName>Replace_Item_Childs</relationshipName>
        <type>MetadataRelationship</type>
    </fields>
    <fields>
        <fullName>IT_Placeholder__c</fullName>
        <label>Placeholder</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IT_Replace_Item__c</fullName>
        <label>Replace Item</label>
        <referenceTo>IT_Replace_ItemMdt__mdt</referenceTo>
        <relationshipLabel>Replace Item Childs</relationshipLabel>
        <relationshipName>Replace_Item_Childs</relationshipName>
        <type>MetadataRelationship</type>
    </fields>
    <fields>
        <fullName>IT_Replace_Type__c</fullName>
        <label>Replace Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Parent</fullName>
                    <default>true</default>
                    <label>Parent</label>
                </value>
                <value>
                    <fullName>Child</fullName>
                </value>
                <value>
                    <fullName>Group</fullName>
                </value>
                <value>
                    <fullName>Image</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Replace Item Child</label>
    <pluralLabel>Replace Item Childs</pluralLabel>
</CustomObject>